# rudi-node-read

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README copy.ipynb  README.ipynb  README.md  SECURITY.md  package.json  pre-commit-checks.sh  pre-commit-up.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
0-ini/: connectors_conf.ini  local_conf.ini
conf_read/: conf_reader.py  connectors_conf_reader.py
doc/rudi-api/: RUDI producer external API - 1.3.0.yml
lib_rudi_io/: io_connector.py  io_rudi_api.py
lib_rudi_meta/: rudi_node_getter.py
scripts/: pre-commit-up.sh  requirements-dev.txt
src/rudi_node_read/: __init__.py  rudi_node_reader.py
src/rudi_node_read/connectors/: io_connector.py  io_rudi_api.py  io_rudi_node_read.py
src/rudi_node_read/utils/: err.py  jwt.py  log.py  serializable.py  type_dict.py  type_string.py  types.py
tests/: test_rudi_node_reader.py
tests/utils/: test_err.py  test_jwt.py  test_serializable.py  test_type_dict.py  test_type_string.py  test_types.py
utils/: dict_utils.py  err.py  http_utils.py  log.py  string_utils.py  type_utils.py
