[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RudiNodeRead"
version = "0.0.1"
authors = [{ name = "Olivier Martineau", email = "olivier.martineau@irisa.fr" }]
description = "Use the external API of a RUDI Producer node"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENCE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Licence :: OSI Approved :: European Union Public License, version 1.2 (EUPL-1.2)",
]
urls = { "RUDI Producer node API" = "https://app.swaggerhub.com/apis/OlivierMartineau/RUDI-PRODUCER" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["rudi_node_read*"]

[tool.setuptools.dynamic]
version = { attr = "rudi_node_read.__version__" }
