[metadata]
name = RudiNodeRead
version = attr: rudi_node_read.__version__
author = Olivier Martineau
author_email = olivier.martineau@irisa.fr
description = Use the external API of a RUDI Producer node
long_description =
    file: README.md
    file: README.ipynb
keywords = RUDI, RUDI API, RUDI node, RUDI producer node, Univ. Rennes
url = https://rudi.bzh
license =
    EUPL 1.2
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Licence :: OSI Approved :: European Union Public License, version 1.2 (EUPL-1.2)

[options]
package_dir = src
packages = find:
python_requires = >=3.8
install_requires = python_version>="3.8"

[options.packages.find]
where = src

[options.extras_require]
dev = pytest==3.11